--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "music_theory"
+name = "music_tools"
 version = "0.1.0"
 authors = ["Alec Deason <alec50@tinycountry.com>"]
 edition = "2018"
