--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 [dependencies]
 ordered-float = "1.0.1"
 regex = "1"
+rand = "*"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
+alsa = "*"
+portaudio = "0.6.3"
+rand = "*"
+num = "0.2.0"
