--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2018"
 
 [dependencies]
 rand = "0.6"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
 portaudio = "0.6.3"
 crossbeam = "0.7"
+console = "0.7.5"
